# ckks-engine-no-std

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  err.ansi  test.rs
.cargo/: config.toml
applications/: FinancialExample.rs  transactions_2024.csv
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/ckks_engine/: all.html  index.html  sidebar-items.js
doc/ckks_engine/arithmetic/: index.html
doc/ckks_engine/ckks/: index.html  sidebar-items.js  struct.CKKSDecryptor.html  struct.CKKSEncryptor.html  struct.CkksParameters.html
doc/ckks_engine/keygen/: index.html  sidebar-items.js  struct.KeyGenerator.html  struct.PublicKey.html  struct.SecretKey.html
doc/ckks_engine/polynomial/: index.html  struct.Polynomial.html
doc/ckks_engine/stringfn/: index.html
doc/ckks_engine/utils/: fn.add_noise.html  fn.decode.html  fn.decode_string.html  fn.encode.html  fn.encode_string.html  fn.mod_reduce.html  fn.mod_reduce_string.html  index.html  sidebar-items.js
doc/search.desc/bitvec/: bitvec-desc-0-.js
doc/search.desc/ckks_engine/: ckks_engine-desc-0-.js
doc/search.desc/ff/: ff-desc-0-.js
doc/search.desc/termcolor/: termcolor-desc-0-.js
doc/search.desc/winapi_util/: winapi_util-desc-0-.js
doc/src/aho_corasick/: ahocorasick.rs.html  automaton.rs.html  dfa.rs.html  lib.rs.html  macros.rs.html
doc/src/bitvec/: access.rs.html  array.rs.html  devel.rs.html  domain.rs.html  field.rs.html  index.rs.html  lib.rs.html  macros.rs.html  mem.rs.html  mutability.rs.html  order.rs.html  prelude.rs.html  ptr.rs.html  slice.rs.html  store.rs.html  view.rs.html
doc/src/byteorder/: lib.rs.html
doc/src/cfg_if/: lib.rs.html
doc/src/ff/: lib.rs.html
doc/unicode_ident/: all.html  fn.is_xid_continue.html  fn.is_xid_start.html  index.html
docs/: CNAME
examples/: main.rs  test.rs  v1_examples.rs  v2_examples.rs  v3_examples.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: arithmetic.rs  ckks.rs  float_polyfill.rs  keygen.rs  lib.rs  main.rs  polynomial.rs  stringfn.rs  utils.rs
tests/: integration_tests.rs
(+439 files in other folders)
