[package]
name = "ckks-engine-no-std"
version = "0.3.0"
edition = "2021"

[dependencies]
serde_arrays = "0.2.0"

[dependencies.serde]
version = "1.0.219"
default-features = false
features = ["derive", "alloc"]

[dependencies.rand]
version = "0.8"          # Random number generation
default-features = false
# features = ["small_rng"]


[dependencies.ff] # Finite field arithmetic
version = "0.9"
default-features = false
# features = ["bits"]
# num-bigint = "0.4"  # For large integer support (could be useful for mod operations)
# log = "0.4"
# env_logger = "0.10"

[dev-dependencies]
approx = "0.5.1"
